crates/ruff_python_formatter/tests/snapshots/black_compatibility@tupleassign.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/simple_cases/tupleassign.py
---
## Input

```py
# This is a standalone comment.
sdfjklsdfsjldkflkjsf, sdfjsdfjlksdljkfsdlkf, sdfsdjfklsdfjlksdljkf, sdsfsdfjskdflsfsdf = 1, 2, 3

# This is as well.
this_will_be_wrapped_in_parens, = struct.unpack(b"12345678901234567890")

(a,) = call()
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -4,9 +4,9 @@
     sdfjsdfjlksdljkfsdlkf,
     sdfsdjfklsdfjlksdljkf,
     sdsfsdfjskdflsfsdf,
-) = (1, 2, 3)
+) = 1, 2, 3
 
 # This is as well.
-(this_will_be_wrapped_in_parens,) = struct.unpack(b"12345678901234567890")
+(this_will_be_wrapped_in_parens,) = NOT_IMPLEMENTED_call(NOT_IMPLEMENTED_arg)
 
-(a,) = call()
+(a,) = NOT_IMPLEMENTED_call()
```

## Ruff Output

```py
# This is a standalone comment.
(
    sdfjklsdfsjldkflkjsf,
    sdfjsdfjlksdljkfsdlkf,
    sdfsdjfklsdfjlksdljkf,
    sdsfsdfjskdflsfsdf,
) = 1, 2, 3

# This is as well.
(this_will_be_wrapped_in_parens,) = NOT_IMPLEMENTED_call(NOT_IMPLEMENTED_arg)

(a,) = NOT_IMPLEMENTED_call()
```

## Black Output

```py
# This is a standalone comment.
(
    sdfjklsdfsjldkflkjsf,
    sdfjsdfjlksdljkfsdlkf,
    sdfsdjfklsdfjlksdljkf,
    sdsfsdfjskdflsfsdf,
) = (1, 2, 3)

# This is as well.
(this_will_be_wrapped_in_parens,) = struct.unpack(b"12345678901234567890")

(a,) = call()
```


