crates/ruff_python_formatter/tests/snapshots/format@docstring_code_examples_crlf.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/ruff/docstring_code_examples_crlf.py
---
## Input
```python
def doctest_line_ending():
    """
    Do cool stuff.
    >>> def foo( x ):
    ...     print( x )
    ...
    ...     print( x )
    """
    pass
```

## Outputs
### Output 1
```
indent-style               = space
line-width                 = 88
indent-width               = 4
quote-style                = Double
line-ending                = CarriageReturnLineFeed
magic-trailing-comma       = Respect
docstring-code             = Enabled
docstring-code-line-width  = "dynamic"
preview                    = Disabled
target_version             = 3.11
source_type                = Python
nested-string-quote-style  = alternating
```

```python
def doctest_line_ending():
    """
    Do cool stuff.
    >>> def foo(x):
    ...     print(x)
    ...
    ...     print(x)
    """
    pass
```
