crates/ruff_python_formatter/tests/snapshots/format@docstring_ends_on_escaped_space.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/ruff/docstring_ends_on_escaped_space.py
---
## Input
```python
class Sample:
    """Hello "World\""""

    def __init__(self):
        pass
```

## Output
```python
class Sample:
    """Hello "World\""""

    def __init__(self):
        pass
```
