crates/ruff_python_formatter/tests/snapshots/format@docstring_non_visible_characters.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input
```python
# Regression test for https://github.com/astral-sh/ruff/issues/11724

'''


'''
```

## Output
```python
# Regression test for https://github.com/astral-sh/ruff/issues/11724

"""


"""
```
